--- a/toy-store/style.css
+++ b/toy-store/style.css
@@ -2,8 +2,8 @@ button {
   width: 155px;
 }
 
-#button-div {
-  display: flex;
+#buttons {
+  display: none;
   align-items: center;
   justify-content: space-around;
   position: fixed;
